@startuml Overview

class Player {
    - int number
    - Optional[PositionType] position
    - Optional[str] forename
    - Optional[str] surname
    - Optional[int] pass_number
}

class Penalty {
    - Player player
    - PenaltiesType penalty 
    - Optional[str] code
    - timedelta start_time
    - timedelta end_time
    - timedelta remaining_time
    + set_start_time(start_time)
    + set_end_time(end_time)
    + update_remaining_time(elapsed_time)
    + is_over() -> bool
}
Penalty "1" *-- "1" Player

class PenatlyManager {
    - List[Penalty] home_penalties_pending
    - List[Penalty] home_penalties_active
    - List[Penalty] home_penalties_expired
    - List[Penalty] guest_penalties_pending
    - List[Penalty] guest_penalties_active
    - List[Penalty] guest_penalties_expired
    + add_penalty(team, penalty)
    + update_time(elapsed_time)
}
PenatlyManager "1" o-- "0..*" Penalty

class Goal {
    - timedelta time
    - Player scorer
    - Optional[Player] assist
}
Goal "1" o-- "1..2" Player

class GoalManager {
    - List[Goal] home_goals
    - List[Goal] guest_goals
    + add_goal(team, goal)
}
GoalManager "1" o-- "0..*" Goal

class Team {
    - list goals
    - list penalties
}
Team "1" o-- "0..*" Goal
Team "1" o-- "0..*" Penalty

class Game {
    - Team home
    - Team guest
}
Game "1" o-- "2" Team

@enduml